# collector

./: .gitignore  CMakeLists.txt  README.md
collector/include/: collector.h
collector/src/: collector.cpp
database/: CMakeLists.txt
database/include/: database.h  inverted_index.h  url_db.h
database/src/: database.cpp  inverted_index.cpp  url_db.cpp
models/: ner_model.dat.REMOVED.git-id  ner_zenith.dat.REMOVED.git-id  total_word_feature_extractor.dat.REMOVED.git-id
nlp/: CMakeLists.txt
nlp/include/: nlp.h
nlp/src/: nlp.cpp
sample_txt/: IIC.txt
